updated blog about

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ rdiscount:
 
 name: Doug Burman 
 url: http://pourfac.es
-description: A fantastic blog that is fantastic.
+description: DougTastic Flow 
 twitter: therapod 
 github: dburman 
 gravatar_url: http://gravatar.com/avatar/601c895402e2655fc3fd00d225e18457
